# crappy_expense_tracker

./: README.md  io.github.yic95.expensetracker.desktop  pyproject.toml
io.github.yic95.expensetracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: __main__.py  datevalidator.py  expense_tracker_app.py  expensefilterproxy.py  expensemodel.py  expenseproxy.py  expenseservice.py  launchpet.py  prompt.txt  tagsservice.py  userroles.py
src/qml/: StatsPage.qml  editPage.qml  main.qml
